--- a/assets/client/ripple.css
+++ b/assets/client/ripple.css
@@ -451,11 +451,12 @@ section.left { left: 0; }
     display: none;
     width: 100%;
     height: 100%;
-    -webkit-box-orient: horizontal;
-    -webkit-box-pack: center;
-    -webkit-box-align: center;
     overflow-y: auto;
     background: rgba(255, 255, 255, 1);
+}
+
+#browser {
+    width: 100%;
 }
 
 .overlay-menu {
