--- a/assets/client/ripple.css
+++ b/assets/client/ripple.css
@@ -1241,3 +1241,51 @@ fieldset {
     -webkit-transition: background 0.5s;
     background-color: #66ccff;
 }
+
+/* START - RIPPLE-71 Barcode Scanner styles */
+.skan-dialog-field-set label {
+  float: left;
+  width: 25%;
+  margin-right: 0.5em;
+  padding-top: 0.2em;
+  text-align: right;
+  font-weight: bold;
+}
+
+.skan-dialog-field-set select {
+    width: 305px;
+}
+
+.skan-dialog-field-set input[type=text] {
+    width: 300px;
+}
+
+.barcode-overlay {
+    z-index: 10000;
+    width: 100%;
+    height: 100%;
+    display: none;
+    background-color: white;
+}
+
+.barcode-close {
+    z-index: 10000;
+    width: 100%;
+    height: 100%;
+}
+
+.barcode-image {
+    z-index: 10000;
+    width: 100%;
+}
+
+.barcode-data {
+    z-index: 10000;
+    text-align: center;
+    font-family: Tahoma, Geneva, sans-serif;
+    font-size: 25px;
+    color: black;
+    padding: 20px;
+    background-color: white;
+}
+/* END - RIPPLE-71 Barcode Scanner styles */
