Updates URLs for documentation and download to the Apache Incubator sites

--- a/targets/chrome.extension/views/popup.html
+++ b/targets/chrome.extension/views/popup.html
@@ -42,7 +42,7 @@
 
                 <hr>
 
-                <p>New to Ripple? Hit up the <a href="http://developer.blackberry.com/html5/documentation" target="_new">Main Documentation</a> to get started.</p>
+                <p>New to Ripple? Hit up the <a href="http://ripple.incubator.apache.org/#documentation" target="_new">Main Documentation</a> to get started.</p>
             </div>
         </div>
   </body>
